Commit al master del blogpost en su version mas reciente

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,16 +1,20 @@
 <html>
     <head>
 <title>
-Buenas 
+Twin Odyssey 
 </title>
 <link rel="stylesheet" href="css/Estilos.css"/>
     </head>
     <body>
+        <div id="Container">
+            <div id="Post">
 <h1>
-Este es un blogpost
+Twin Odyssey, el mejor video juego 2d
 </h1>
 <p>
-y este es un parrafo
+y este es un parrafo inicial donde vamos a explicar de que trata :D
 </p>
+    </div>
+        </div>
     </body>
 </html>
