Estructura inicial de la cabecera

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -7,6 +7,9 @@ Twin Odyssey
     </head>
     <body>
         <div id="Container">
+            <div id="Cabecera">
+                Cabecera
+            </div>
             <div id="Post">
 <h1>
 Twin Odyssey, el mejor video juego 2d
