Finalizada la cabecera con diseño azul

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -8,7 +8,8 @@ Twin Odyssey
     <body>
         <div id="Container">
             <div id="Cabecera">
-                Cabecera
+               Nuestro primer video juego
+               <span id="TagLine"> Tu blog de confianza</span>
             </div>
             <div id="Post">
 <h1>
