Agregando la sinopsis de Twin Odyssey y cambiando la fuente

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -14,6 +14,10 @@ Twin Odyssey, el mejor video juego 2d
 <p>
 y este es un parrafo inicial donde vamos a explicar de que trata :D
 </p>
+<p>Es un emocionante plataformas de accion y aventuras
+    en el cual juegas con dos protagonistas con mecanicas
+    e historias unicas.
+</p>
     </div>
         </div>
     </body>
