Modifique la cabecera y el color del texto

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -9,7 +9,7 @@ Twin Odyssey
         <div id="Container">
             <div id="Cabecera">
                Nuestro primer video juego
-               <span id="TagLine"> Tu blog de confianza</span>
+               <span id="TagLine"> Tu blog de Cabecera</span>
             </div>
             <div id="Post">
 <h1>
