Agregue comprar, cambie la abecera y todo esta purpura[C

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -9,7 +9,7 @@ Twin Odyssey
         <div id="Container">
             <div id="Cabecera">
                Nuestro primer video juego
-               <span id="TagLine"> Tu blog de confianza</span>
+               <span id="TagLine"> Tu blog de maestria</span>
             </div>
             <div id="Post">
 <h1>
@@ -22,6 +22,7 @@ y este es un parrafo inicial donde vamos a explicar de que trata :D
     en el cual juegas con dos protagonistas con mecanicas
     e historias unicas.
 </p>
+<p>Compralo ya</p>
     </div>
         </div>
     </body>
