Cambie el titulo del blogpost
para que este mas bonito

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 <title>
-Twin Odyssey 
+Twin Odyssey para todos 
 </title>
 <link rel="stylesheet" href="css/Estilos.css"/>
     </head>
