Cambios en el titulo y final del texto

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 <title>
-Twin Odyssey para todos 
+Twin Odyssey Game
 </title>
 <link rel="stylesheet" href="css/Estilos.css"/>
     </head>
@@ -22,7 +22,7 @@ y este es un parrafo inicial donde vamos a explicar de que trata :D
     en el cual juegas con dos protagonistas con mecanicas
     e historias unicas.
 </p>
-<p>Compralo ya</p>
+<p>Descargalo ya</p>
     </div>
         </div>
     </body>
