Color de fondo, logo nuevo y mejor color de header

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -8,6 +8,7 @@ Twin Odyssey Game
     <body>
         <div id="Container">
             <div id="Cabecera">
+                <img id="logo" src="imagenes/Twin_Odysseyy.png"/>
                Nuestro primer video juego
                <span id="TagLine"> Tu blog de maestria</span>
             </div>
