--- a/Blogpost.html
+++ b/Blogpost.html
@@ -8,6 +8,7 @@ Twin Odyssey Game
     <body>
         <div id="Container">
             <div id="Cabecera">
+                <img id="logo" src="imagenes/Twin_Odysseyy.png"/>
                Nuestro primer video juego
                <span id="TagLine"> Tu blog de maestria</span>
             </div>
@@ -24,6 +25,9 @@ y este es un parrafo inicial donde vamos a explicar de que trata :D
 </p>
 <p>Descargalo ya</p>
     </div>
+            <div id="footer">
+                Hecho con amor hevel studios &lt;3
+                </div>
         </div>
     </body>
 </html>
