--- a/Blogpost.html
+++ b/Blogpost.html
@@ -10,21 +10,24 @@ Twin Odyssey Game
             <div id="Cabecera">
                 <img id="logo" src="imagenes/Twin_Odysseyy.png"/>
                Nuestro primer video juego
-               <span id="TagLine"> Tu blog de maestria</span>
+               <span id="TagLine"> Tu blog de maestría</span>
             </div>
             <div id="Post">
 <h1>
 Twin Odyssey, el mejor video juego 2d
 </h1>
 <p>
-y este es un parrafo inicial donde vamos a explicar de que trata :D
+y este es un párrafo inicial donde vamos a explicar de que trata :D
 </p>
-<p>Es un emocionante plataformas de accion y aventuras
-    en el cual juegas con dos protagonistas con mecanicas
-    e historias unicas.
+<p>Es un emocionante plataformas de acción y aventuras
+    en el cual juegas con dos protagonistas con mecánicas
+    e historias únicas.
 </p>
-<p>Descargalo ya</p>
+<p>Descárgalo ya</p>
     </div>
+            <div id="footer">
+                Hecho con amor hevel studios &lt;3
+                </div>
         </div>
     </body>
 </html>
