Cambios a entidades html en vez de tildes

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -10,20 +10,20 @@ Twin Odyssey Game
             <div id="Cabecera">
                 <img id="logo" src="imagenes/Twin_Odysseyy.png"/>
                Nuestro primer video juego
-               <span id="TagLine"> Tu blog de maestría</span>
+               <span id="TagLine"> Tu blog de maestr&iacute;a</span>
             </div>
             <div id="Post">
 <h1>
 Twin Odyssey, el mejor video juego 2d
 </h1>
 <p>
-y este es un párrafo inicial donde vamos a explicar de que trata :D
+y este es un p&aacute;rrafo inicial donde vamos a explicar de que trata :D
 </p>
-<p>Es un emocionante plataformas de acción y aventuras
+<p>Es un emocionante plataformas de acci&oacute;n y aventuras
     en el cual juegas con dos protagonistas con mecánicas
-    e historias únicas.
+    e historias &uacute;nicas.
 </p>
-<p>Descárgalo ya</p>
+<p>Desc&aacute;rgalo ya</p>
     </div>
             <div id="footer">
                 Hecho con amor hevel studios &lt;3
