Agregue una imagen al blog

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -23,6 +23,7 @@ y este es un p&aacute;rrafo inicial donde vamos a explicar de que trata :D
     en el cual juegas con dos protagonistas con mecánicas
     e historias &uacute;nicas.
 </p>
+<p><img src="imagenes/TwinOdyssey.png" width="600"/></p>
 <p>Desc&aacute;rgalo ya</p>
     </div>
             <div id="footer">
