Cammbio al tagline y color del footer

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -10,7 +10,7 @@ Twin Odyssey Game
             <div id="Cabecera">
                 <img id="logo" src="imagenes/Twin_Odysseyy.png"/>
                Nuestro primer video juego
-               <span id="TagLine"> Tu blog de maestr&iacute;a</span>
+               <span id="TagLine"> Tu blog de confianza</span>
             </div>
             <div id="Post">
 <h1>
